--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <ul>
         <li class="text"><div class="vl">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</li></div>
         <br>
-        <a class="button_link">Scroll Down</a>
+        <a href="http://google.com" class="button_link">Scroll Down</a>
     </ul>
 </body>
 </html>
