--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <nav>
         <ul>
             <li>chirpus inc.</li>
             <li><a href="http://google.com" class="nav_link">Work</a></li>
@@ -16,6 +17,7 @@
             <li><a href="http://google.com" class="nav_link">Contact</a></li>
             <li><a href="http://google.com" class="button_link">Hire Us</a></li>
         </ul>
+        </nav>
     </header>
     <h1>chirpus inc.</h1>
     <ul>
